@@ -2165,6 +2165,119 @@ MULTIPOINT(
         $this->assertEquals(FALSE, $writer->getIncludeSRID());
     }
 
+    public function testWKBWriter_write()
+    {
+        $writer = new GEOSWKBWriter();
+        $reader = new GEOSWKTReader();
+
+        try {
+            $writer->write(1);
+            $this->assertTrue(FALSE); # this is just to fail if we get here
+        } catch (Exception $e) {
+            $this->assertContains('expects parameter 1', $e->getMessage());
+        }
+
+        $g = $reader->read('POINT(6 7)');
+        $g->setSRID(43);
+
+        $writer->setOutputDimension(2); // 2D
+
+        // 2D LITTLE endian
+        $writer->setByteOrder(1);
+        $this->assertEquals(
+            hex2bin('010100000000000000000018400000000000001C40'),
+            $writer->write($g));
+        // 2D LITTLE endian + SRID
+        $writer->setIncludeSRID(TRUE);
+        $this->assertEquals(
+            hex2bin('01010000202B00000000000000000018400000000000001C40'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+
+        // 2D BIG endian
+        $writer->setByteOrder(0);
+        $this->assertEquals(hex2bin('00000000014018000000000000401C000000000000'),
+            $writer->write($g));
+        // 2D BIG endian + SRID
+        $writer->setIncludeSRID(TRUE);
+        $this->assertEquals(
+            hex2bin('00200000010000002B4018000000000000401C000000000000'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+
+        $writer->setOutputDimension(3); // 3D
+
+        // 3D LITTLE endian (2D input)
+        $writer->setByteOrder(1);
+        $this->assertEquals(
+            hex2bin('010100000000000000000018400000000000001C40'),
+            $writer->write($g));
+        // 3D LITTLE endian + SRID  (2D input)
+        $writer->setIncludeSRID(TRUE);
+        $this->assertEquals(
+            hex2bin('01010000202B00000000000000000018400000000000001C40'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+
+        // 3D BIG endian (2D input)
+        $writer->setByteOrder(0);
+        $this->assertEquals(hex2bin('00000000014018000000000000401C000000000000'),
+            $writer->write($g));
+        // 3D BIG endian + SRID (2D input)
+        $writer->setIncludeSRID(TRUE);
+        $this->assertEquals(
+            hex2bin('00200000010000002B4018000000000000401C000000000000'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+
+
+        $g = $reader->read('POINT(6 7 8)');
+        $g->setSRID(53);
+
+        $writer->setOutputDimension(2); // 2D
+
+        // 2D LITTLE endian (3D input)
+        $writer->setByteOrder(1);
+        $this->assertEquals(hex2bin('010100000000000000000018400000000000001C40'),
+            $writer->write($g));
+        // 2D LITTLE endian + SRID (3D input)
+        $writer->setIncludeSRID(TRUE);
+        $writer->setByteOrder(1);
+        $this->assertEquals(
+            hex2bin('01010000203500000000000000000018400000000000001C40'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+        // 2D BIG endian (3D input)
+        $writer->setByteOrder(0);
+        $this->assertEquals(hex2bin('00000000014018000000000000401C000000000000'),
+            $writer->write($g));
+        // 2D BIG endian + SRID (3D input)
+        $writer->setIncludeSRID(TRUE);
+        $this->assertEquals(
+            hex2bin('0020000001000000354018000000000000401C000000000000'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+
+        $writer->setOutputDimension(3); // 3D
+
+        // 3D LITTLE endian (3D input)
+        $writer->setByteOrder(1);
+        $this->assertEquals(
+            hex2bin('010100008000000000000018400000000000001C400000000000002040'),
+            $writer->write($g));
+        // 3D BIG endian (3D input)
+        $writer->setByteOrder(0);
+        $this->assertEquals(
+            hex2bin('00800000014018000000000000401C0000000000004020000000000000'),
+            $writer->write($g));
+        // 3D BIG endian + SRID (3D input)
+        $writer->setIncludeSRID(TRUE);
+        $this->assertEquals(
+            hex2bin('00A0000001000000354018000000000000401C0000000000004020000000000000'),
+            $writer->write($g));
+        $writer->setIncludeSRID(FALSE);
+    }
+
     public function testWKBWriter_writeHEX()
     {
         $writer = new GEOSWKBWriter();
@@ -2282,6 +2395,64 @@ MULTIPOINT(
     {
         $reader = new GEOSWKBReader();
         $this->assertNotNull($reader);
+    }
+
+    public function testWKBReader_read()
+    {
+        $reader = new GEOSWKBReader();
+
+        $writer = new GEOSWKTWriter();
+        $writer->setTrim(TRUE);
+        $writer->setOutputDimension(3);
+
+        // 2D LITTLE endian
+        $g = $reader->read(hex2bin(
+            '010100000000000000000018400000000000001C40'
+        ));
+        $this->assertEquals('POINT (6 7)', $writer->write($g));
+        $this->assertEquals(0, $g->getSRID());
+
+        // 2D BIG endian
+        $g = $reader->read(hex2bin(
+            '00000000014018000000000000401C000000000000'
+        ));
+        $this->assertEquals('POINT (6 7)', $writer->write($g));
+        $this->assertEquals(0, $g->getSRID());
+
+        // 2D LITTLE endian + SRID
+        $g = $reader->read(hex2bin(
+            '01010000202B00000000000000000018400000000000001C40'
+        ));
+        $this->assertEquals('POINT (6 7)', $writer->write($g));
+        $this->assertEquals(43, $g->getSRID());
+
+        // 2D BIG endian + SRID
+        $g = $reader->read(hex2bin(
+            '00200000010000002B4018000000000000401C000000000000'
+        ));
+        $this->assertEquals('POINT (6 7)', $writer->write($g));
+        $this->assertEquals(43, $g->getSRID());
+
+        // 3D LITTLE endian
+        $g = $reader->read(hex2bin(
+            '010100008000000000000018400000000000001C400000000000002040'
+        ));
+        $this->assertEquals('POINT Z (6 7 8)', $writer->write($g));
+        $this->assertEquals(0, $g->getSRID());
+
+        // 3D BIG endian
+        $g = $reader->read(hex2bin(
+            '00800000014018000000000000401C0000000000004020000000000000'
+        ));
+        $this->assertEquals('POINT Z (6 7 8)', $writer->write($g));
+        $this->assertEquals(0, $g->getSRID());
+
+        // 3D BIG endian + SRID
+        $g = $reader->read(hex2bin(
+            '00A0000001000000354018000000000000401C0000000000004020000000000000'
+        ));
+        $this->assertEquals('POINT Z (6 7 8)', $writer->write($g));
+        $this->assertEquals(53, $g->getSRID());
     }
 
     public function testWKBReader_readHEX()
